--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ h2 {
 .profile {
     display: flex;
     flex-direction: row;
+    width: 100%;
     border: solid 0.2em;
     border-color: antiquewhite;
     background-color: black;
@@ -75,7 +76,7 @@ h2 {
     font-size: larger;
     color:red;
      padding: 0px 15px 0px 0px;
-    width: 40em;
+    /* width: 40em; */
     }
 
 .profile a {       /* règles CSS pour les balises <a> de la section Profile */
@@ -96,6 +97,7 @@ h2 {
 .sectionMotivations {
     display:flex;  /* Règles CSS DIV  SectionMotivations */
     flex-direction:row;   
+    width: 100%;
     border: solid 0.2em;
     border:1px dotted black;
     border-width:2px;
@@ -137,6 +139,7 @@ h2 {
 .sectionOnline {
     display: flex;  
     flex-direction:column;   
+    width: 100%;
     border: solid 0.2em;
     border:1px dotted black;
     border-width:2px;
@@ -194,6 +197,7 @@ h2 {
 #hobbies{   /* un id rend l'élément unique *  Règles CSS DIV  HOBBIES */
     display: flex;  
     flex-direction:row;   
+    width: 89%;
     justify-content:space-between;
     border: solid 0.2em;
     border:1px dotted black;
@@ -217,7 +221,7 @@ h2 {
 }
 
 
-/*                    Règles CSS pour écrans Smartphone      */
+/*         Tentatives:           Règles CSS pour écrans Smartphone      */
 @media (max-width: 640px) {
 	* {
 		box-sizing: border-box;
